--- a/sort.html
+++ b/sort.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bootstrap Table</title>
+    <title>Sort Table</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css" rel="stylesheet">
     <style>
@@ -66,30 +66,20 @@
                 <tr>
                     <td class="id">002</td>
                     <td class="country">France</td>
-                    <td class="some-number">10.625</td>
+                    <td class="some-number">-</td>
                 </tr>
                 <tr>
                     <td class="id">003</td>
                     <td class="country">UK</td>
                     <td class="some-number">15.04</td>
                 </tr>
-                <tr>
-                    <td class="id">004</td>
-                    <td class="country">China</td>
-                    <td class="some-number">13.536</td>
-                </tr>
-                <tr>
-                    <td class="id">005</td>
-                    <td class="country">Canada</td>
-                    <td class="some-number">-</td>
-                </tr>
                  <tr>
-                    <td class="id">006</td>
+                    <td class="id">004</td>
                     <td class="country">Australia</td>
                     <td class="some-number">16.554</td>
                 </tr>
                 <tr>
-                    <td class="id">007</td>
+                    <td class="id">005</td>
                     <td class="country">Georgia</td>
                     <td class="some-number">-</td>
                 </tr>
